[package]
edition = "2021"
name = "sponsorblock-mirror"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.7"
sqlx = {version = "0.8", features = ["runtime-tokio-rustls", "postgres", "migrate", "time", "uuid", "json"]}
lazy_static = "1.5.0"
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}
num_cpus = "1.17.0"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = {version = "0.12.20", features = ["json", "rustls-tls", "gzip", "brotli"], default-features = false}
serde = {version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
tokio = {version = "1.45.1", features = ["full"]}
dotenvy = "0.15"
